[metadata]
name = hvpytils
version = 0.0.1
author = Literal Genie
description = HV-related utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LiteralGenie/HvPytils
project_urls =
    Bug Tracker = https://github.com/LiteralGenie/HvPytils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    attrs
    urlpath